[package]
name = "baryon"
version = "0.1.0"
edition = "2021"
description = "My program! (TODO: Edit this description)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General
miette = "7.2.0"

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Tokio
tokio = { version = "1.37.0", features = ["full"] }

# Shutdown
tokio-graceful-shutdown = "0.16.0"

# Command line arguments
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
semver = { version = "1.0.26", features = ["serde"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
anyhow = "1.0.97"
futures-util = "0.3.31"
typify = "0.3.0"
reqwest = "0.12.15"
chrono = "0.4.40"
thiserror = "2.0.12"
regress = "0.10.3"
